.k8s/express-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-scheduler
spec:
  replicas: 1
  minReadySeconds: 20
  selector:
    matchLabels:
      app: express-scheduler
  template:
    metadata:
      labels:
        app: express-scheduler
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: scheduler
          image: express-scheduler
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
