.k8s/express-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-redis
spec:
  selector:
    matchLabels:
      app: express-redis
  template:
    metadata:
      labels:
        app: express-redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: redis
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: redis
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: express-redis
  namespace: logistics
spec:
  type: ClusterIP
  selector:
    app: express-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
